# vanderpol

./: .gitignore  README.md  pyproject.toml
configs/: bundle_full.json  bundle_n100.json  bundle_n100_time2.json  bundle_n20.json  bundle_n20_ai_selector.json  bundle_smoke.json  calibration.json  citations.json  default.yaml  limitations.json  real_feature_targets.json
docs/: 00_start_here.md  01_system_pipeline.md  02_data_usage.md  03_v001_result_summary.md  04_v001_figure_guide.md  05_next_work.md  README.md  calibration_report.md  current_run_snapshot.md  dashboard_results_share.md  data_requirements.md  final_result.json  final_result.md  final_result_runs.csv  mitdb_abnormal_data.md  paper_all_data.md  real_data_validation.md  real_vs_synthetic_abnormal_validation.md  results_only.md  results_summary.md  stage4_reporting.md  stage5_analysis.md  stage6_real_noise.md  stage7_balanced_robustness.md  stage8_bundle.md  stage9_paper_artifacts.md  stage_status.md  v001_figure_guide_ko.md  v001_full_pipeline_interpretation.md
scripts/: auto_mutation_runner.py  bootstrap_matrix_report.py  compare_real_synthetic_abnormal.py  compare_synthetic_real_features.py  conservative_sweep.py  download_challenge_balanced.py  download_physionet_sample.py  estimate_alarm_noise_by_category.py  estimate_real_noise.py  extract_annotated_windows.py  fallback_threshold_sweep.py  generate_decision_boundary.py  generate_executive_summary.py  generate_final_result.py  generate_live_report.py  generate_paper_artifacts.py  generate_phase2_figures.py  generate_selector_report.py  (+16 more)
(+48 files in other folders)
