[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanderpol-ecg-selector"
version = "0.1.0"
description = "Synthetic ECG electrical-stimulation selector research scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
external-data = [
  "wfdb>=4.1",
]
ml = [
  "torch>=2.3",
]
figures = [
  "matplotlib>=3.8",
]
hydra = [
  "hydra-core>=1.3",
  "pyyaml>=6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
